* requirejs 설치, 동작확인

--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -3,4 +3,6 @@
   <h1><%-title %></h1>
   <p>Welcome to <%-title %></p>
 
+  <script src="components/requirejs/require.js" data-main="js/main.js"></script>
+
 <% include footer %>
