--- a/app/views/header.ejs
+++ b/app/views/header.ejs
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" ng-app="invention4">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width">
