--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -2,7 +2,8 @@
 
   <h1><%-title %></h1>
   <p>Welcome to <%-title %></p>
+  <div ng-controller="Index">{{ welcomeMessage }}</div>
 
-  <script src="components/requirejs/require.js" data-main="js/main.js"></script>
+  <script src="components/requirejs/require.js" data-main="js/index.js"></script>
 
 <% include footer %>
