--- a/app/views/header.ejs
+++ b/app/views/header.ejs
@@ -6,5 +6,6 @@
   <title><%-title %></title>
   <link rel="stylesheet" href="/css/style.css">
   <script src="http://localhost:35729/livereload.js"></script>
+  <script src="/components/platform/platform.js"></script>
 </head>
 <body>
