--- a/app/views/header.ejs
+++ b/app/views/header.ejs
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width">
   <title><%-title %></title>
   <link rel="stylesheet" href="/css/style.css">
-  <script src="http://localhost:35729/livereload.js"></script>
   <script src="/components/platform/platform.js"></script>
+  <script src="http://localhost:35729/livereload.js"></script>
 </head>
-<body>
+<body fullbleed vertical layout unresolved>
