--- a/app/views/header.ejs
+++ b/app/views/header.ejs
@@ -6,6 +6,7 @@
   <title><%-title %></title>
   <link rel="stylesheet" href="/css/style.css">
   <script src="/components/platform/platform.js"></script>
+  <link rel="import"     href="components/polymer/polymer.html">
   <script src="http://localhost:35729/livereload.js"></script>
 </head>
 <body fullbleed vertical layout unresolved>
