--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -2,35 +2,33 @@
 
   <style>
   body {
-  font-family: sans-serif;
-}
-core-header-panel {
-  background: white;
-}
-core-toolbar {
-  background-color: #03A9F4;
-}
-div {
-  margin: 20px;
-  padding: 80px 20px;
-  border-radius: 20px;
-  background-color: #eee;
-}
+    font-family: helvetica sans-serif;
+  }
+  core-header-panel {
+    background-color:#fff;
+  }
+  core-toolbar {
+    background-color: #152B3C;
+  }
+  p {
+    margin: 20px;
+    padding: 80px 20px;
+    border-radius: 20px;
+    background-color: #eee;
+    color:#E32D40;
+  }
   </style>
 
+<link href='http://fonts.googleapis.com/css?family=Coda' rel='stylesheet' type='text/css'>
 
-  <h1><%-title %></h1>
-  <p>Welcome to <%-title %></p>
-  <div ng-controller="Index">{{ welcomeMessage }}</div>
-
-  <core-toolbar id="mainheader">
-      <paper-icon-button id="navicon" 
-        icon="arrow-back"></paper-icon-button>
-      <span flex>Title</span>
-      <paper-icon-button id="searchbutton" 
-        icon="search"></paper-icon-button>
-    </core-toolbar>
-
-  <script src="components/requirejs/require.js" data-main="js/index.js"></script>
+<core-header-panel flex mode="seamed">
+  <core-toolbar class="tall" id="mainheader"><div class="middle" style="color:white;font-size:32px;font-family: 'Coda', cursive;text-align:center;width:100%;">Invention4</div></core-toolbar>
+  <p ng-controller="Index">
+    {{ welcomeMessage }}
+  </p>
+  <p>Sample content.</p>
+</core-header-panel>
+  
+<script src="components/requirejs/require.js" data-main="js/index.js"></script>
 
 <% include footer %>
