* 인증 추가 login페이지 추가

--- a/app/views/auth.ejs
+++ b/app/views/auth.ejs
@@ -1,34 +1,35 @@
 <% include header %>
 
-  <style>
-  body {
-    font-family: helvetica sans-serif;
-  }
-  core-header-panel {
-    background-color:#fff;
-  }
-  core-toolbar {
-    background-color: #152B3C;
-  }
-  p {
-    margin: 20px;
-    padding: 80px 20px;
-    border-radius: 20px;
-    background-color: #eee;
-    color:#E32D40;
-  }
-  </style>
+<style>
+body {
+  font-family: sans-serif;
+}
+core-header-panel {
+  background: white;
+}
+core-toolbar {
+  background-color: #D1432F;
+}
+p {
+  margin: 20px;
+  padding: 80px 20px;
+  border-radius: 20px;
+  background-color: #eee;
+}
+</style>
 
-<link href='http://fonts.googleapis.com/css?family=Coda' rel='stylesheet' type='text/css'>
-
-<core-header-panel flex mode="seamed">
-  <core-toolbar class="tall" id="mainheader"><div class="middle" style="color:white;font-size:32px;font-family: 'Coda', cursive;text-align:center;width:100%;">Invention4</div></core-toolbar>
-  <p ng-controller="Index">
-    {{ welcomeMessage }}
-  </p>
-  <p>Sample content.</p>
-</core-header-panel>
+<core-header-panel flex>
+    <core-toolbar id="mainheader">
+      <paper-icon-button id="navicon" 
+        icon="arrow-back"></paper-icon-button>
+      <span flex>Log-in</span>
+      <paper-icon-button id="searchbutton" 
+        icon="search"></paper-icon-button>
+    </core-toolbar>
+    <p>Sample content.</p>
+    <p>Sample content.</p>
+  </core-header-panel>
   
-<script src="components/requirejs/require.js" data-main="js/index.js"></script>
+<script src="components/requirejs/require.js" data-main="js/auth.js"></script>
 
 <% include footer %>
