--- a/app/views/header.ejs
+++ b/app/views/header.ejs
@@ -4,10 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width">
   <title><%-title %></title>
-  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="/css/style.css" shim-shadowdom>
   <script src="/components/platform/platform.js"></script>
-  <link rel="import" href="components/polymer/polymer.html">
-  <link rel="import" href="components/polymer-grid-layout/polymer-grid-layout.html"    
+  <link rel="import" href="components/polymer/polymer.html">    
   <script src="http://localhost:35729/livereload.js"></script>
 </head>
 <body fullbleed vertical layout unresolved>
