--- a/public/less/style.less
+++ b/public/less/style.less
@@ -15,3 +15,11 @@ paper-button[raised].primary {
 paper-icon-button.primary {
 	color: @primaryColor;
 }
+
+paper-input.primary[focused] /deep/ .floated-label .label-text {
+  color: @primaryColor;
+}
+
+paper-input.primary /deep/ .focused-underline {
+  background-color: @primaryColor;
+}
