* 유효성 검증 추가중, 라이브러리 업데이트

--- a/app/views/auth.ejs
+++ b/app/views/auth.ejs
@@ -9,6 +9,11 @@
   </core-toolbar>
 
   <form style="margin-top:20px;width:350px;margin-left:auto;margin-right:auto;">
+
+    <paper-input-decorator label="required" floatingLabel error="input is required!">
+      <input is="paper-input" required>
+    </paper-input-decorator>
+
     <paper-input
       ng-model="formData.username"
       class="primary"
