--- a/public/less/style.less
+++ b/public/less/style.less
@@ -1,5 +1,10 @@
 // common css styles
 
+/** to use ng-cloak **/
+[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
+  display: none !important;
+}
+
 @primaryColor: #fe774d;
 
 core-toolbar#mainheader {
