--- a/app/views/auth.ejs
+++ b/app/views/auth.ejs
@@ -39,19 +39,30 @@
       label="username" 
       floatingLabel 
       error="{{errorMessage(loginForm.username.$error)}}" 
-      isInvalid="{{((!loginForm.username.$valid && loginForm.username.$dirty))}}"
+      isInvalid="{{!loginForm.username.$valid && loginForm.username.$dirty}}"
     >
-      <input name="username" is="paper-input" ng-model="formData.username" required ng-maxlength="10" ng-minlength="4">
+      <input name="username" is="paper-input"
+        required 
+        ng-model="formData.username" 
+        ng-maxlength="10" 
+        ng-minlength="4"
+        ng-keydown="hideGlobalValidation()"
+      >
     </paper-input-decorator>
 
     <paper-input-decorator 
       label="password" 
       floatingLabel
-      error="{{formData.error.password}}"
-      isInvalid="{{formData.valid.password}}"
+      error="{{errorMessage(loginForm.password.$error)}}"
+      isInvalid="{{!loginForm.password.$valid && loginForm.password.$dirty}}"
     >
-      <input name="password" is="paper-input" type="password" required
-        ng-model="formData.password">
+      <input name="password" is="paper-input" type="password"
+        required
+        ng-model="formData.password"
+        ng-maxlength="10"
+        ng-minlength="4"
+        ng-keydown="hideGlobalValidation()"
+      >
     </paper-input-decorator>
 
     
