로그인 폼 유효성 코드 정리

--- a/app/views/auth.ejs
+++ b/app/views/auth.ejs
@@ -4,7 +4,7 @@
 
 .global-validator {
   display: inline-block;
-  background: pink;
+  background: #EEE;
   box-sizing: border-box;
   margin-bottom: 0px;
   margin-top: 20px;
