--- a/public/less/auth.less
+++ b/public/less/auth.less
@@ -1,5 +1,7 @@
 // auth page style
 
+@import 'variables.less';
+
 form {
   margin-top  :20px;
   width       :350px;
@@ -17,25 +19,25 @@ form {
     margin    :0;
     margin-top:20px;
   }
-
- .global-validator {
-    display      : inline-block;
-    background   : #EEE;
-    box-sizing   : border-box;
-    margin-bottom: 0px;
-    margin-top   : 20px;
-    padding      : 10px;
-    border-radius: 2px;
-    width        :100%;
-    color        : red;
-    font-size    :13px;
-
-    core-icon {
-      margin-right:5px;
-      font-size   :12px;
-      height      :18px;
-      width       :18px; 
-    }
-  } 
 }
 
+/** global validation **/
+paper-shadow.global-validator {
+  display         : inline-block;
+  background-color: @lightPrimaryColor;
+  box-sizing      : border-box;
+  margin-bottom   : 0px;
+  margin-top      : 20px;
+  padding         : 10px;
+  border-radius   : 2px;
+  width           : 100%;
+  color           : @textNicon;
+  font-size       : 13px;
+
+  core-icon {
+    margin-right:5px;
+    font-size   :12px;
+    height      :18px;
+    width       :18px; 
+  }
+} 
