login 중일때 login 페이지에 엑세스하지 못하도록 함 상단 header toolbar 스타일 변경

--- a/app/views/auth.ejs
+++ b/app/views/auth.ejs
@@ -2,10 +2,8 @@
 
 <core-header-panel flex mode="seamed" ng-controller="Auth">
   <core-toolbar id="mainheader">
-    <paper-icon-button id="navicon" 
-      class="primary" icon="arrow-back">
-    </paper-icon-button>
     <span flex>Invention4</span>
+    <paper-icon-button icon="home" class="primary"></paper-icon-button>
   </core-toolbar>
 
   <form name="loginForm">
