--- a/app/views/admin.ejs
+++ b/app/views/admin.ejs
@@ -1,19 +1,32 @@
 <% include header %>
+<style shim-shadowdom>
+paper-dropdown {
+  position: absolute!important;
+  top: 38px!important;
+  right:55px!important;
+  width:250px;
+}
+html /deep/ paper-dropdown {    
+  color: #000;
+  padding: 0px;
+}
+</style>
 
-<core-header-panel flex mode="seamed" ng-controller="Auth">
+<core-header-panel flex mode="seamed" ng-controller="Admin">
   <core-toolbar id="mainheader">
     <span flex>Invention4</span>
-    <paper-icon-button icon="account-circle" class="primary">
-      <paper-dropdown>
-          halign = left
-          <br>
-          valign = top
-        </paper-dropdown>
-    </paper-icon-button>
-    <paper-icon-button icon="home" class="primary"></paper-icon-button>
+    <div relative>
+      <paper-icon-button icon="account-circle" class="primary" ng-click="dropdown($event)" ></paper-icon-button>
+      <paper-dropdown halign="right">
+        halign = left
+        <br>
+        valign = top
+      </paper-dropdown>
+      <paper-icon-button icon="home" class="primary"></paper-icon-button>
+    </div>     
   </core-toolbar>
 </core-header-panel>
 
-<script src="components/requirejs/require.js" data-main="js/auth.js"></script>
+<script src="components/requirejs/require.js" data-main="js/admin.js"></script>
 
 <% include footer %>
