--- a/app/views/admin.ejs
+++ b/app/views/admin.ejs
@@ -4,12 +4,14 @@ paper-dropdown {
   position: absolute!important;
   top: 38px!important;
   right:55px!important;
-  width:250px;
+  width:150px!important;
 }
-html /deep/ paper-dropdown {    
-  color: #000;
-  padding: 0px;
-}
+html /deep/ paper-dropdown::shadow #scroller {
+      box-sizing: border-box;
+      padding: 10px;
+      color:#000;
+      font-size:12px;
+    }
 </style>
 
 <core-header-panel flex mode="seamed" ng-controller="Admin">
@@ -18,9 +20,9 @@ html /deep/ paper-dropdown {
     <div relative>
       <paper-icon-button icon="account-circle" class="primary" ng-click="dropdown($event)" ></paper-icon-button>
       <paper-dropdown halign="right">
-        halign = left
-        <br>
-        valign = top
+        <div class="menu">
+          <paper-item ng-click="logout()">Log out</paper-item>  
+        </div>
       </paper-dropdown>
       <paper-icon-button icon="home" class="primary"></paper-icon-button>
     </div>     
