--- a/app/views/auth.ejs
+++ b/app/views/auth.ejs
@@ -63,6 +63,6 @@
   </form>
 </core-header-panel>
 
-<script src="components/requirejs/require.js" data-main="js/auth.js"></script>
+<script src="/components/requirejs/require.js" data-main="/js/auth.js"></script>
 
 <% include footer %>
