--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -29,6 +29,6 @@
   <p>Sample content.</p>
 </core-header-panel>
   
-<script src="components/requirejs/require.js" data-main="js/index.js"></script>
+<script src="/components/requirejs/require.js" data-main="/js/index.js"></script>
 
 <% include footer %>
