--- a/public/less/style.less
+++ b/public/less/style.less
@@ -14,6 +14,12 @@ body {
 	color      : @primaryText;
 }
 
+a {
+	text-decoration: none;
+	color: @secondaryText;
+	border-bottom: 1px dashed gray;
+}
+
 /** polymer ui customize **/
 
 // core toolbar
