--- a/app/views/topbar.ejs
+++ b/app/views/topbar.ejs
@@ -1,6 +1,9 @@
 <style shim-shadowdom>
-papaer-item {
-  border:2px solid red;
+.menu paper-item:first-child > .button-content {
+  padding-bottom:0px!important;
+}
+.menu paper-item:last-child > .button-content {
+  padding-top:5px!important;
 }
 </style>
 
@@ -11,15 +14,20 @@ papaer-item {
       <paper-icon-button icon="account-circle" class="primary" ng-click="dropdown($event)" ></paper-icon-button>
       <paper-dropdown halign="right">
         <div class="menu">
-          <paper-item noink style="width:100%;text-align:center"> Logged in as&nbsp;<a href="#"><%=username%></a></paper-item>
+          <paper-item noink style="width:100%;"> 
+            <div style="float:left;"><%=username%></div>
+            <div style="float:right;width:100%;">
+              <paper-icon-button class="primary" icon="settings" style="float:right;"></paper-icon-button>
+            </div>
+          </paper-item>
          
           <paper-item noink>
-          <paper-button ng-click="logout('<%- logoutUrl %>')"
+            <paper-button ng-click="logout('<%- logoutUrl %>')"
       raised style="width:100%;" class="submit primary">
       Logout&nbsp;<core-icon="exit-to-app"></core-icon>
-    </paper-button>
+            </paper-button>
 
-        </paper-item>
+          </paper-item>
         </div>
       </paper-dropdown>
     <% } %>
