--- a/app/views/auth.ejs
+++ b/app/views/auth.ejs
@@ -1,66 +1,67 @@
 <% include header %>
 
-<core-header-panel flex mode="seamed" ng-controller="Auth">
-  <core-toolbar id="mainheader">
-    <span flex>Invention4</span>
-    <paper-icon-button icon="home" class="primary"></paper-icon-button>
-  </core-toolbar>
+<core-header-panel flex mode="seamed">
 
-  <form name="loginForm">
+  <% include topbar %>
 
-    <paper-input-decorator 
-      label="username" 
-      floatingLabel 
-      error="{{errorMessage(loginForm.username.$error)}}" 
-      isInvalid="{{!loginForm.username.$valid && loginForm.username.$dirty}}"
-    >
-      <input name="username" is="paper-input"
-        required 
-        ng-model="formData.username" 
-        ng-maxlength="10" 
-        ng-minlength="4"
-        ng-keydown="hideGlobalValidation()"
+  <div id="contents" ng-controller="Auth">
+
+    <form name="loginForm">
+
+      <paper-input-decorator 
+        label="username" 
+        floatingLabel 
+        error="{{errorMessage(loginForm.username.$error)}}" 
+        isInvalid="{{!loginForm.username.$valid && loginForm.username.$dirty}}"
       >
-    </paper-input-decorator>
+        <input name="username" is="paper-input"
+          required 
+          ng-model="formData.username" 
+          ng-maxlength="10" 
+          ng-minlength="4"
+          ng-keydown="hideGlobalValidation()"
+        >
+      </paper-input-decorator>
 
-    <paper-input-decorator 
-      label="password" 
-      floatingLabel
-      error="{{errorMessage(loginForm.password.$error)}}"
-      isInvalid="{{!loginForm.password.$valid && loginForm.password.$dirty}}"
-    >
-      <input name="password" is="paper-input" type="password"
-        required
-        ng-model="formData.password"
-        ng-maxlength="10"
-        ng-minlength="4"
-        ng-keydown="hideGlobalValidation()"
+      <paper-input-decorator 
+        label="password" 
+        floatingLabel
+        error="{{errorMessage(loginForm.password.$error)}}"
+        isInvalid="{{!loginForm.password.$valid && loginForm.password.$dirty}}"
       >
-    </paper-input-decorator>
+        <input name="password" is="paper-input" type="password"
+          required
+          ng-model="formData.password"
+          ng-maxlength="10"
+          ng-minlength="4"
+          ng-keydown="hideGlobalValidation()"
+        >
+      </paper-input-decorator>
 
-    
-    <paper-shadow 
-      class="global-validator" 
-      z="1"
-      ng-cloak
-      ng-show="formData.valid.global"
-    >
-      <core-icon icon="report-problem"></core-icon>
-      {{formData.error.global}}
-    </paper-shadow>
+      
+      <paper-shadow 
+        class="global-validator" 
+        z="1"
+        ng-cloak
+        ng-show="formData.valid.global"
+      >
+        <core-icon icon="report-problem"></core-icon>
+        {{formData.error.global}}
+      </paper-shadow>
 
-    <paper-button
-      ng-click="submit('<%-submitUrl%>')"
-      raised class="submit primary">
-      Login
-    </paper-button>
+      <paper-button
+        ng-click="submit('<%-submitUrl%>')"
+        raised class="submit primary">
+        Login
+      </paper-button>
 
-    <paper-button
-      class="findpassword primary">
-      Forgot password?
-    </paper-button>
-    
-  </form>
+      <paper-button
+        class="findpassword primary">
+        Forgot password?
+      </paper-button>
+      
+    </form>
+  </div>
 </core-header-panel>
 
 <script src="/components/requirejs/require.js" data-main="/js/auth.js"></script>
