--- a/app/views/admin.ejs
+++ b/app/views/admin.ejs
@@ -2,7 +2,17 @@
 
 <core-header-panel flex mode="seamed">
   <% include topbar %>
+
+  <core-toolbar id="title-header" class="medium-tall">
+
+  	<div class="top indent title"><h1>List of posts</h1></div>
+  	<paper-fab icon="add" class="bottom indent" title="add new post"></paper-fab>
+  	<span flex class="bottom indent subtitle">Invention4 > Admin panel</span>
+
+	</core-toolbar>
+
   <div id="contents" ng-controller="Admin">
+
   </div>
 </core-header-panel>
 
