--- a/public/less/admin.less
+++ b/public/less/admin.less
@@ -19,3 +19,13 @@ html /deep/ paper-dropdown::shadow #scroller {
   box-sizing: border-box;
   padding: 0px;
 }
+
+#title-header {
+  .title    { margin-left: 120px; }
+  .subtitle { margin-left: 38px; }
+  paper-fab {
+    margin-left     :20px;
+    margin-top      :60px;
+    background-color:@accentColor;
+  }
+}
