--- a/public/less/style.less
+++ b/public/less/style.less
@@ -115,3 +115,16 @@ paper-input-decorator /deep/ .error {
 		width:100%;
 	}
 }
+
+
+#title-header {
+ background-color: @primaryColor;
+ color           : @textNicon;
+ height          :130px;
+
+ .subtitle {
+ 	 color: @dividerColor;
+ 	 font-size:17px;
+ }
+
+}
