새 포스트 작성 버튼 구

--- a/app/views/admin.ejs
+++ b/app/views/admin.ejs
@@ -3,16 +3,20 @@
 <core-header-panel flex mode="seamed">
   <% include topbar %>
 
-  <core-toolbar id="title-header" class="medium-tall">
+  <div ng-controller="Admin">
 
-  	<div class="top indent title"><h1>List of posts</h1></div>
-  	<paper-fab icon="add" class="bottom indent" title="add new post"></paper-fab>
-  	<span flex class="bottom indent subtitle">Invention4 > Admin panel</span>
+    <core-toolbar id="title-header" class="medium-tall">
 
-	</core-toolbar>
+    	<div class="top indent title"><h1>List of posts</h1></div>
+    	<paper-fab icon="add" ng-click="addPost('<%= newPostUrl %>')" class="bottom indent" title="add new post"></paper-fab>
+    	<span flex class="bottom indent subtitle">Invention4 > Admin panel</span>
 
-  <div id="contents" ng-controller="Admin">
+  	</core-toolbar>
 
+    <div id="contents">
+      <div test ng-model="zzzzz"></div>
+    </div>
+  
   </div>
 </core-header-panel>
 
