new post 스크립트들 추가

--- a/app/views/admin_new_post.ejs
+++ b/app/views/admin_new_post.ejs
@@ -14,12 +14,12 @@
   	</core-toolbar>
 
     <div id="contents">
-      <div test ng-model="zzzzz"></div>
+      <div id="epiceditor"></div>
     </div>
   
   </div>
 </core-header-panel>
 
-<script src="/components/requirejs/require.js" data-main="/js/admin.js"></script>
+<script src="/components/requirejs/require.js" data-main="/js/admin_new_post.js"></script>
 
 <% include footer %>
