--- a/app/views/admin_new_post.ejs
+++ b/app/views/admin_new_post.ejs
@@ -14,7 +14,7 @@
   	</core-toolbar>
 
     <div id="contents">
-      <div id="epiceditor"></div>
+      <textarea id="editor"></textarea>
     </div>
   
   </div>
