디자인 수정중

--- a/app/views/admin.ejs
+++ b/app/views/admin.ejs
@@ -14,7 +14,7 @@
   	</core-toolbar>
 
     <div id="contents">
-      <div test ng-model="zzzzz"></div>
+      <div test style="height:800px;" ng-model="zzzzz"></div>
     </div>
   
   </div>
