--- a/app/views/admin_new_post.ejs
+++ b/app/views/admin_new_post.ejs
@@ -14,7 +14,7 @@
   	</core-toolbar>
 
     <div id="contents">
-      <textarea id="editor"></textarea>
+      <div style="width:200px;height:200px;margin-right:auto;margin-left:auto;border:1px solid red;"><textarea id="editor"></textarea></div>
     </div>
   
   </div>
