--- a/app/views/topbar.ejs
+++ b/app/views/topbar.ejs
@@ -2,10 +2,17 @@
   <span flex>
     <%if (username) { %> 
       <paper-icon-button icon="menu" class="primary"></paper-icon-button>
+      Invention4
     <% } else { %>
       Invention4
     <% } %>
   </span>
+
+  <% if(username) { %>
+  <% } else { %>
+  <% } %>
+
+
   <div relative>
     <%if (username) { %>
 
