--- a/app/views/admin.ejs
+++ b/app/views/admin.ejs
@@ -5,13 +5,13 @@
 
   <div ng-controller="Admin">
 
-    <core-toolbar id="title-header" class="medium-tall">
+ <!--  <core-toolbar id="title-header" class="medium-tall">
 
     	<div class="top indent title"><h1>List of posts</h1></div>
     	<paper-fab icon="add" ng-click="addPost('<%= newPostUrl %>')" class="bottom indent" title="add new post"></paper-fab>
     	<span flex class="bottom indent subtitle">Invention4 > Admin panel</span>
 
-  	</core-toolbar>
+  	</core-toolbar> -->
 
     <div id="contents">
       <div test style="height:800px;" ng-model="zzzzz"></div>
