--- a/app/views/topbar.ejs
+++ b/app/views/topbar.ejs
@@ -1,17 +1,8 @@
-<core-toolbar id="mainheader" ng-controller="AdminTopMenu">
-  <span flex>
-    <%if (username) { %> 
-      <paper-icon-button icon="menu" class="primary"></paper-icon-button>
-      Invention4
-    <% } else { %>
-      Invention4
-    <% } %>
-  </span>
-
-  <% if(username) { %>
-  <% } else { %>
+<core-toolbar id="mainheader" class="medium-tall" ng-controller="AdminTopMenu">
+  <% if (username) { %>
+    <paper-icon-button icon="menu" class="primary"></paper-icon-button>
   <% } %>
-
+  <span flex>Invention4</span>
 
   <div relative>
     <%if (username) { %>
@@ -40,4 +31,21 @@
     <% } %>
     <paper-icon-button ng-click="home()" icon="home" class="primary"></paper-icon-button>
   </div>
+
+  <div class="bottom fit" horizontal layout>
+    <paper-tabs selected="0" flex style="max-width: 600px;">
+      <paper-tab>LIST OF POST</paper-tab>
+      <paper-tab></paper-tab>
+      <paper-tab></paper-tab>
+    </paper-tabs>
+  </div>
+
 </core-toolbar>
+
+  <!-- <core-toolbar id="title-header" class="medium-tall">
+
+      <div class="top indent title"><h1>List of posts</h1></div>
+      <paper-fab icon="add" ng-click="addPost('<%= newPostUrl %>')" class="bottom indent" title="add new post"></paper-fab>
+      <span flex class="bottom indent subtitle">Invention4 > Admin panel</span>
+
+    </core-toolbar> -->
