--- a/public/less/style.less
+++ b/public/less/style.less
@@ -32,6 +32,28 @@ core-toolbar#mainheader {
   color           : @textNicon;
 }
 
+paper-tabs {
+			font-size:13px;
+			font-weight:bold;
+			height:40px;
+      //background-color: #00bcd4;
+      color: #fff;
+      box-shadow: 0px 3px 2px rgba(0, 0, 0, 0.2);
+    }
+    
+    paper-tabs {
+      box-shadow: none;
+    }
+
+    paper-tabs::shadow #selectionBar {
+  background-color: #ff4081;
+  height:4px;
+}
+
+    paper-tabs paper-tab::shadow #ink {
+  color: #ff4081;
+}
+
 // buttons
 
 paper-button[raised].primary {
